syntax = "proto3";

import "Sence.proto";

option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "EntityProto";
//实体类型
message EntityType {
    int32 id = 1;
    string name = 2;
}
//场景实体 npc 野怪
message SenceEntity {
   int32 num = 1;
   int32 state = 2;
   repeated EntityType type=3;
}
//用户角色实体
message UserEntity {
    int32 typeId = 1;
    string nick = 2;//昵称
    int32 userId = 3;
    int32 state = 4;
    repeated EntityType type = 5;
}
//请求
message RequestEntityInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time = 2;        //时间戳(单位:毫秒)
    int32 typeId = 3;
}
//响应
message ResponseEntityInfo {
    uint64 msg_id = 1;      //消息id
    int32 result  = 2;
    uint64 time = 3;        //时间戳
    string content = 4;

    Sence sence = 5;
    repeated SenceEntity SenceEntity = 6;
    repeated UserEntity UserEntity = 7;
}

